src/snapshots/loxrust__scanner__tests__class.snap
---
source: src/scanner.rs
expression: tys
---
[
    Class,
    Identifier,
    Less,
    Identifier,
    LeftBrace,
    Fun,
    Identifier,
    LeftParen,
    Identifier,
    RightParen,
    LeftBrace,
    Return,
    Identifier,
    Plus,
    Number,
    Semicolon,
    RightBrace,
    RightBrace,
    Eof,
]
