src/snapshots/loxrust__scanner__tests__numbers.snap
---
source: src/scanner.rs
expression: tys
---
[
    Var,
    Identifier,
    Equal,
    Number,
    Semicolon,
    Var,
    Identifier,
    Equal,
    Number,
    Semicolon,
    Var,
    Identifier,
    Equal,
    Number,
    Semicolon,
    Eof,
]
