src/snapshots/loxrust__scanner__tests__parser_string.snap
---
source: src/scanner.rs
expression: tys
---
[
    Var,
    Identifier,
    Equal,
    String,
    Semicolon,
    Eof,
]
