src/snapshots/loxrust__scanner__tests__parser_valid_lox.snap
---
source: src/scanner.rs
expression: tys
---
[
    Fun,
    Identifier,
    LeftParen,
    Identifier,
    Comma,
    Identifier,
    RightParen,
    LeftBrace,
    Return,
    Identifier,
    Plus,
    Identifier,
    Semicolon,
    RightBrace,
    Fun,
    Identifier,
    LeftParen,
    Identifier,
    RightParen,
    LeftBrace,
    Return,
    Identifier,
    Semicolon,
    RightBrace,
    Print,
    Identifier,
    LeftParen,
    Identifier,
    RightParen,
    LeftParen,
    Number,
    Comma,
    Number,
    RightParen,
    Semicolon,
    Eof,
]
